<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"


    android:layout_height="match_parent"
    android:background="#E4E4CE"
    tools:context=".PizzaDetailsActivity">

    <ImageView
        android:id="@+id/pizzaImageOrderView"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/custompizza" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaImageOrderView">

        <TextView
            android:id="@+id/pizzaNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/temp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/homeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:text="@string/home"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/homeImage" />

                <ImageView
                    android:id="@+id/homeImage"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_home" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/cartTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:text="@string/cart"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cartImage" />

                <ImageView
                    android:id="@+id/cartImage"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_cart" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/storeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:text="@string/store"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/storeImage" />

                <ImageView
                    android:id="@+id/storeImage"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_store_orders" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/crustxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/crust"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/crusttxt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/temp"
            app:layout_constraintStart_toEndOf="@+id/crustxt"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crustxt">

            <RadioButton
                android:id="@+id/smallbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                android:checked="true"
                android:text="@string/small"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/mediumbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                android:text="@string/medium"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/largebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                android:text="@string/large"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

        <Button
            android:id="@+id/addToOrderbtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/addtoOrder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/toppings"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <CheckBox
            android:id="@+id/sausageCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="#000000"
            android:onClick="onCheckboxClicked"
            android:text="@string/sausage"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/pepperoniCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="#000000"
            android:onClick="onCheckboxClicked"
            android:text="@string/pepperoni"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sausageCB"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/pepperCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="#000000"
            android:onClick="onCheckboxClicked"
            android:text="@string/pepper"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pepperoniCB"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/onionCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="#000000"
            android:text="@string/onion"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pepperCB"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/bbqchickenCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:buttonTint="#000000"
            android:onClick="onCheckboxClicked"
            android:text="@string/bbqChicken"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/provoloneCB"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/provoloneCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:buttonTint="#000000"
            android:onClick="onCheckboxClicked"
            android:text="@string/provolone"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/sausageCB"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/cheddarCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:buttonTint="#000000"
            android:onClick="onCheckboxClicked"
            android:text="@string/cheddar"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/pepperoniCB"
            app:layout_constraintTop_toBottomOf="@+id/provoloneCB"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/hamCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:buttonTint="#000000"
            android:onClick="onCheckboxClicked"
            android:text="@string/ham"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/onionCB"
            app:layout_constraintTop_toBottomOf="@+id/beefCB"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/beefCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:buttonTint="#000000"
            android:onClick="onCheckboxClicked"
            android:text="@string/beef"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/pepperCB"
            app:layout_constraintTop_toBottomOf="@+id/cheddarCB"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/baconCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:buttonTint="#000000"
            android:onClick="onCheckboxClicked"
            android:text="@string/bacon"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/cheddarCB"
            app:layout_constraintTop_toBottomOf="@+id/bbqchickenCB"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/pineappleCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:buttonTint="#000000"
            android:onClick="onCheckboxClicked"
            android:text="@string/pineapple"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/beefCB"
            app:layout_constraintTop_toBottomOf="@+id/baconCB"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/olivesCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:buttonTint="#000000"
            android:onClick="onCheckboxClicked"
            android:text="@string/olives"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/hamCB"
            app:layout_constraintTop_toBottomOf="@+id/pineappleCB"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/mushroomCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="#000000"
            android:onClick="onCheckboxClicked"
            android:text="@string/mushroom"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onionCB"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/priceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/price"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mushroomCB" />

        <TextView
            android:id="@+id/priceValuetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/priceTxt"
            app:layout_constraintTop_toBottomOf="@+id/mushroomCB" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>